fixed overflow-y secttion serviços

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-:root{
+:root{ /*root para fazer o resposivo*/
   font-size: 62.5%;
 }
 
@@ -57,6 +57,7 @@ img {
   padding-left: 64px;
   padding-right: 64px;
   padding-top: 24px;
+  display: none;
 }
 
 .container {
@@ -100,6 +101,7 @@ img {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  display: none;
 }
 
 h1 {
@@ -163,6 +165,8 @@ button {
   place-items: center;
   padding-top: 160px;
   padding-bottom: 160px;
+  display: none;
+
 }
 
 .historia h2 {
@@ -173,6 +177,7 @@ button {
   text-align: center;
   color: #002847;
 
+  margin: 0 auto;
   margin-bottom: 24px;
   width: 240px;
 }
@@ -200,6 +205,8 @@ button {
   background-color: #002847;
   padding-top: 80px;
   padding-bottom: 80px;
+  display: none;
+
 }
 
 .parceiros h2 {
@@ -276,6 +283,8 @@ button {
   place-items: center;
   background-color: #ffffff;
   padding-top: 80px;
+  display: none;
+
 }
 
 .clientes h2 {
@@ -329,164 +338,57 @@ ul.ultimasclientes {
 }
 
 /*5º SECTION-Serviços*/
-.servicos {
+.servicos{
   width: 100%;
-  height: 918px;
   background-color: #002847;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
 }
 
-.titulo-servicos {
-  display: grid;
-  place-items: center;
+.container-servicos{
+  padding: 16rem 6.4rem;
+  max-width:fit-content;
 }
 
-.servicos h2 {
-  width: 494px;
-  font-style: normal;
+
+
+
+
+.container-servicos h2,span{ /*config texto principal section serviços*/
+  font-size: 3.2rem;
+  max-width: 46.4rem;
+  height: 8rem;
   font-weight: 700;
-  font-size: 32px;
-  line-height: 40px;
   text-align: center;
-  color: #ffffff;
-  display: grid;
-  margin-top: 160px;
+  line-height: 4rem;
+  padding-bottom: 2.4rem;
 }
 
-.servicos span {
-  color: #0099a8;
+.container-servicos h2{
+  color: #ffffff;
 }
 
-.servicos p {
-  width: 752px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  text-align: center;
-  color: #ffffff;
-  margin-top: 24px;
+.container-servicos span{
+  color:#0099a8;
 }
 
 .cards {
-  width: 100%;
+  width: auto;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 40px;
-  margin-bottom: 160px;
-  padding-left: 64px;
-  padding-right: 64px;
-  gap: 32px;
+   justify-content: center;
+   gap: 1.6rem;
+    
 }
 
-#card-1:hover,
-#card-2:hover,
-#card-3:hover {
-  background-color: #ffffff;
-  transition: all 0.5s ease;
-}
-
-#card-1 {
-  width: 416px;
-  height: 382px;
-  background-color: #066c9b;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  padding-bottom: 80px;
-}
-
-#card-1 h3 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 125%;
-  text-align: center;
-  letter-spacing: -1px;
-  color: #002847;
-  margin-top: 40px;
-}
-
-#card-1 p {
-  width: 334px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  text-align: center;
-  color: #ffffff;
-  margin-top: 8px;
-}
-
-#card-1:hover p {
-  width: 334px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  text-align: center;
-  color: #002847;
-  margin-top: 8px;
-
-  transition: all 0.5s ease;
-}
-
-#card-2 {
-  width: 416px;
-  height: 382px;
-  background-color: #066c9b;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  font-size: 16px;
-}
-
-#card-2 h3 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 125%;
-  text-align: center;
-  letter-spacing: -1px;
-  color: #002847;
-  margin-top: 57px;
-}
-
-#card-2 p {
-  width: 310px;
-  height: 144px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  text-align: center;
-  color: #ffffff;
-  margin-top: 8px;
-  margin-bottom: 32px;
-}
-
-#card-2:hover p {
-  width: 310px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  text-align: center;
-  color: #002847;
-  margin-top: 8px;
-  margin-bottom: 32px;
-
-  transition: all 0.5s ease;
-}
-
-#card-3 {
-  width: 416px;
-  height: 382px;
+/*
+  #card-1:hover,
+  #card-2:hover,
+  #card-3:hover {
+    background-color: #ffffff;
+    transition: all 0.5s ease;
+  }
+  */
+#card-1,#card-2,#card-3 {
+  width: 30.42vw;
+  height: 26.53vw;
   background-color: #066c9b;
   display: flex;
   align-items: center;
@@ -494,10 +396,10 @@ ul.ultimasclientes {
   justify-content: center;
 }
 
-#card-3 h3 {
+#card-1 h3,#card-2 h3,#card-3 h3 {
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 2vw;
   line-height: 125%;
   text-align: center;
   letter-spacing: -1px;
@@ -505,11 +407,11 @@ ul.ultimasclientes {
   margin-top: 40px;
 }
 
-#card-3 p {
-  width: 288px;
+#card-1 p,#card-2 p,#card-3 p {
+  width: 31vw;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1.33vw;
   line-height: 150%;
   text-align: center;
   color: #ffffff;
@@ -517,19 +419,21 @@ ul.ultimasclientes {
   margin-bottom: 80px;
 }
 
-#card-3:hover p {
-  width: 288px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  text-align: center;
-  color: #002847;
-  margin-top: 8px;
-  margin-bottom: 80px;
-  transition: all 0.5s ease;
-}
 
+/*
+  #card-1:hover p,#card-2:hover p,#card-3:hover p {
+    width: 288px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;
+    color: #002847;
+    margin-top: 8px;
+    margin-bottom: 80px;
+    transition: all 0.5s ease;
+  }
+  */
 #icon {
   width: 64px;
   height: 64px;
@@ -545,6 +449,7 @@ ul.ultimasclientes {
   margin: 15px;
 }
 
+
 /* 6ºSECTION - POLÍTICA */
 .politica {
   background-color: #00b0f2;
@@ -554,6 +459,8 @@ ul.ultimasclientes {
   align-items: center;
   padding-top: 80px;
   padding-bottom: 80px;
+  display: none;
+
 }
 
 /* centralização do titulo da section politica */
@@ -656,6 +563,8 @@ ul.ultimasclientes {
   justify-content: center;
   padding-top: 160px;
   padding-bottom: 160px;
+  display: none;
+
 }
 
 .economia h2 {
@@ -692,6 +601,8 @@ ul.ultimasclientes {
   justify-content: center;
   padding-top: 160px;
   padding-bottom: 160px;
+  display: none;
+
 }
 
 .exp h2 {
@@ -723,6 +634,8 @@ ul.ultimasclientes {
   justify-content: center;
   padding-top: 80px;
   padding-bottom: 80px;
+  display: none;
+
 }
 
 .localizacao h2 {
@@ -778,6 +691,8 @@ ul.ultimasclientes {
   align-items: center;
   justify-content: center;
   padding-top: 160px;
+  display: none;
+
   
 }
 
@@ -829,6 +744,8 @@ ul.ultimasclientes {
   flex-wrap: wrap;
   padding-top: 40px;
   padding-bottom: 40px;
+  display: none;
+
 }
 
 .container-footer {
@@ -847,6 +764,18 @@ ul.ultimasclientes {
 .footer span {
   font-weight: 600;
 }
+
+/*alinhamento div container*/
+.historia-container, .politica-container,
+ .orcamento-container, .localizacao-container, 
+ .exp-container, .parceiros-container, 
+ .clientes-container{
+  width: 100%;
+  margin: 0 auto;
+  max-width: 121.6rem;
+  padding:0 1.5rem;
+}
+
 
 
 /*Responsividade*/
